[tool.poetry]
name = "e004dipproject"
version = "0.1.0"
description = ""
authors = ["JorsinLuvhart <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = ">=2.6.2"
gym = "^0.21.0"
keras-rl2 = "^1.0.5"
pyglet = "^1.5.21"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
