[tool.poetry]
name = "e004dipproject"
version = "0.1.0"
description = ""
authors = ["JorsinLuvhart <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
arcade = "^2.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
